# comps-service/comps_service/main.py
@@ -219,7 +219,11 @@ def generate_comps_table(
 @app.get(
     "/v1/runs/{run_id}",
     response_model=RunResponse,
-    responses={404: {"model": ErrorResponse}, 503: {"model": ErrorResponse}},
+    responses={
+        400: {"model": ErrorResponse},
+        404: {"model": ErrorResponse},
+        503: {"model": ErrorResponse},
+    },
     tags=["Runs"],
 )
 def get_run(
@@ -239,7 +243,11 @@ def get_run(
 @app.get(
     "/v1/runs/{run_id}/table",
     response_model=RunTableResponse,
-    responses={404: {"model": ErrorResponse}, 503: {"model": ErrorResponse}},
+    responses={
+        400: {"model": ErrorResponse},
+        404: {"model": ErrorResponse},
+        503: {"model": ErrorResponse},
+    },
     tags=["Runs"],
 )
 def get_run_table(
